Kubernetes/kubernetes/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  labels:
    app: web-app
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
  - name: nginx
    protocol: TCP
    port: 80
    targetPort: 80
